Fix jumbotron alignment and make hackEDU text larger.

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,9 @@
 @import url(http://fonts.googleapis.com/css?family=Amaranth:700);
 
+.navbar-static-top {
+  margin-bottom: 0px;
+}
+
 .index_jumbotron {
   background-color: #d3595d;
   color: #fff;
@@ -7,4 +11,5 @@
 
 .index_jumbotron h1 {
   font-family: 'Amaranth', sans-serif;
+  font-size: 96px;
 }
